--- a/src/xrc/xrc.csproj
+++ b/src/xrc/xrc.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Kernel\IXrcService.cs" />
     <Compile Include="Kernel\XrcService.cs" />
     <Compile Include="Pages\ParametricUriSegmentResult.cs" />
+    <Compile Include="Pages\Providers\Common\XrcItemList.cs" />
     <Compile Include="Pages\Providers\Common\IPageStructureService.cs" />
     <Compile Include="Pages\Providers\Common\PageLocatorResult.cs" />
     <Compile Include="Pages\Providers\Common\XrcItem.cs" />
