site configuration now support regex pattern

--- a/test/xrc.UnitTest/App.config
+++ b/test/xrc.UnitTest/App.config
@@ -8,16 +8,16 @@
 	<xrc>
 		<rootPath virtualPath="~/sampleWebSiteStructure" />
 		<sites>
-			<add key="en" uri="http://www.northwind.com">
+			<add key="en" uriPattern="https?://www\.northwind\.com(:80|:443)?/">
 				<parameters>
 				</parameters>
 			</add>
-			<add key="it" uri="http://it.northwind.com">
+			<add key="it" uriPattern="http://it\.northwind\.com">
 				<parameters>
 					<add key="culture" value="it" />
 				</parameters>
 			</add>
-			<add key="local" uri="http://localhost:8080" secureUri="https://localhost:8043">
+			<add key="local" uriPattern="https?://localhost:(8080|8043)">
 				<parameters>
 					<add key="debug" value="true" />
 				</parameters>
