--- a/demo/DemoWebSite/Web.config
+++ b/demo/DemoWebSite/Web.config
@@ -22,21 +22,12 @@
 	<xrc>
 		<rootPath virtualPath="~/xrc" />
 		<sites>
-			<add key="local" uri="http://localhost:8082/DemoWebSite">
+			<add key="local" uriPattern="http://localhost">
 				<parameters>
 					<add key="debug" value="true" />
 				</parameters>
 			</add>
-			<add key="azure" uri="http://xrcdemo.azurewebsites.net/">
-				<parameters>
-					<add key="debug" value="false" />
-				</parameters>
-			</add>
-			<add key="localiis" uri="http://localhost/xrcdemo">
-				<parameters>
-					<add key="debug" value="false" />
-				</parameters>
-			</add>
+			<add key="default" uriPattern="." />
 		</sites>
 		<parameters>
 			<add key="culture" value="en" />
