--- a/demo/DemoWebSite/DemoWebSite.csproj
+++ b/demo/DemoWebSite/DemoWebSite.csproj
@@ -201,6 +201,10 @@
     <Content Include="xrc\shared\_layout3cols.xrc">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="xrc\viewtest\sampleImage.png" />
+    <Content Include="xrc\viewtest\_raw.xrc">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="xrc\viewtest\_demowebsite.xrc">
       <SubType>Designer</SubType>
     </Content>
