--- a/demo/DemoWebSite/DemoWebSite.csproj
+++ b/demo/DemoWebSite/DemoWebSite.csproj
@@ -144,6 +144,9 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="xrc\docs\test1\{url_CATCH-ALL}.ext.xrc">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="xrc\news\search.xrc">
       <SubType>Designer</SubType>
     </Content>
