working on error pages

--- a/demo/DemoWebSite/Web.config
+++ b/demo/DemoWebSite/Web.config
@@ -73,11 +73,14 @@
 			</namespaces>
 		</pages>
 
-		<customErrors mode="RemoteOnly"/>
+		<customErrors mode="Off"/>
 	</system.web>
 
 	<system.webServer>
+		<!-- TODO Check if this setting is required -->
 		<validation validateIntegratedModeConfiguration="false"/>
+		
+		<!-- TODO Check if this setting is required -->
 		<modules runAllManagedModulesForAllRequests="true"/>
 	</system.webServer>
 
