--- a/src/xrc.Core/xrc.Core.csproj
+++ b/src/xrc.Core/xrc.Core.csproj
@@ -67,8 +67,12 @@
     <Compile Include="Configuration\ComponentCollection.cs" />
     <Compile Include="Configuration\ComponentElement.cs" />
     <Compile Include="Configuration\AspNetHostingConfig.cs" />
+    <Compile Include="Configuration\FileSystemConfig.cs" />
+    <Compile Include="Configuration\CustomErrorsConfig.cs" />
+    <Compile Include="Configuration\EnvironmentConfig.cs" />
+    <Compile Include="Configuration\IEnvironmentConfig.cs" />
     <Compile Include="Configuration\IHostingConfig.cs" />
-    <Compile Include="Configuration\ISitesConfig.cs" />
+    <Compile Include="Configuration\ICustomErrorsConfig.cs" />
     <Compile Include="Configuration\IFileSystemConfig.cs" />
     <Compile Include="Configuration\RootPathElement.cs" />
     <Compile Include="Context\Context.cs" />
@@ -84,7 +88,7 @@
     <Compile Include="Exceptions\MovedPermanentlyException.cs" />
     <Compile Include="Exceptions\ResourceNotFoundException.cs" />
     <Compile Include="Exceptions\XrcException.cs" />
-    <Compile Include="HttpModules\CustomErrorPages.cs" />
+    <Compile Include="CustomErrors\CustomErrorHttpModule.cs" />
     <Compile Include="Markdown\IMarkdownService.cs" />
     <Compile Include="Markdown\MarkdownService.cs" />
     <Compile Include="MimeTypes.cs" />
@@ -130,8 +134,6 @@
     <Compile Include="Razor\ModuleInterceptor.cs" />
     <Compile Include="Razor\XrcWebViewPage.cs" />
     <Compile Include="Routing\XrcRoute.cs" />
-    <Compile Include="Sites\SiteConfigurationMismatchException.cs" />
-    <Compile Include="Sites\SiteConfigurationNotFoundException.cs" />
     <Compile Include="Views\RawView.cs" />
     <Compile Include="Views\MarkdownView.cs" />
     <Compile Include="Views\HtmlView.cs" />
@@ -144,14 +146,10 @@
     <Compile Include="Kernel\Kernel.cs" />
     <Compile Include="Kernel\IKernel.cs" />
     <Compile Include="Configuration\XrcSection.cs" />
-    <Compile Include="Sites\SiteConfiguration.cs" />
-    <Compile Include="Sites\ISiteConfiguration.cs" />
-    <Compile Include="Sites\ISiteConfigurationProviderService.cs" />
-    <Compile Include="Sites\SiteConfigurationProviderService.cs" />
-    <Compile Include="Configuration\SiteParameterCollection.cs" />
-    <Compile Include="Configuration\SiteParameterElement.cs" />
-    <Compile Include="Configuration\SiteCollection.cs" />
-    <Compile Include="Configuration\SiteElement.cs" />
+    <Compile Include="CustomErrors\CustomErrorEntry.cs" />
+    <Compile Include="CustomErrors\ICustomErrorEntry.cs" />
+    <Compile Include="Configuration\CustomErrorCollection.cs" />
+    <Compile Include="Configuration\CustomErrorElement.cs" />
     <Compile Include="HttpHandler\XrcHttpHandler.cs" />
     <Compile Include="Views\SlotView.cs" />
     <Compile Include="Views\XmlView.cs" />
