--- a/demo/DemoWebSite/Web.config
+++ b/demo/DemoWebSite/Web.config
@@ -16,23 +16,15 @@
 
 	<appSettings>
 		<add key="webpages:Version" value="1.0.0.0"/>
+		<add key="culture" value="en" />
+		<add key="debug" value="false" />
 	</appSettings>
-
 
 	<xrc>
 		<rootPath virtualPath="~/xrc" />
-		<sites>
-			<add key="local" uriPattern="http://localhost">
-				<parameters>
-					<add key="debug" value="true" />
-				</parameters>
-			</add>
-			<add key="default" uriPattern="." />
-		</sites>
-		<parameters>
-			<add key="culture" value="en" />
-			<add key="debug" value="false" />
-		</parameters>
+		<customErrors defaultUrl="~/error/default">
+			<add statusCode="404" url="~/error/404" />
+		</customErrors>
 	</xrc>
 
 	<system.web.webPages.razor>
