--- a/src/xrc.Windsor/xrc.Windsor.csproj
+++ b/src/xrc.Windsor/xrc.Windsor.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{2496197E-8B17-4AA0-98B2-E57B2C924EDF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>xrc.IoC.Windsor</RootNamespace>
+    <RootNamespace>xrc.Windsor</RootNamespace>
     <AssemblyName>xrc.Windsor</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -46,6 +46,7 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,13 +57,15 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="TraceCallInterceptor.cs" />
-    <Compile Include="TraceFacility.cs" />
-    <Compile Include="WindsorModuleCatalogService.cs" />
-    <Compile Include="WindsorViewCatalogService.cs" />
-    <Compile Include="WindsorModuleFactory.cs" />
-    <Compile Include="WindsorViewFactory.cs" />
-    <Compile Include="XrcDefaultInstaller.cs" />
+    <Compile Include="HttpModuleFactory.cs" />
+    <Compile Include="Tracing\TraceCallInterceptor.cs" />
+    <Compile Include="Tracing\TraceFacility.cs" />
+    <Compile Include="ControllerFactory.cs" />
+    <Compile Include="xrcIntegration\WindsorModuleCatalogService.cs" />
+    <Compile Include="xrcIntegration\WindsorViewCatalogService.cs" />
+    <Compile Include="xrcIntegration\WindsorModuleFactory.cs" />
+    <Compile Include="xrcIntegration\WindsorViewFactory.cs" />
+    <Compile Include="Installers\XrcInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +77,7 @@
       <Name>xrc.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
