--- a/demo/DemoWebSite/DemoWebSite.csproj
+++ b/demo/DemoWebSite/DemoWebSite.csproj
@@ -294,6 +294,7 @@
     <Content Include="xrc\viewtest\index.cshtml" />
     <Content Include="xrc\viewtest\_markdownFile.md" />
     <Content Include="xrc\error\index.cshtml" />
+    <Content Include="xrc\error\default.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\xrc.Core\xrc.Core.csproj">
