--- a/test/xrc.Web.AcceptanceTest/Web.config
+++ b/test/xrc.Web.AcceptanceTest/Web.config
@@ -53,6 +53,8 @@
 			<forms loginUrl="~/Account/LogOn" timeout="2880" />
 		</authentication>
 
+		<customErrors mode="Off" />
+		
 		<pages>
 			<namespaces>
 				<add namespace="System.Web.Helpers" />
