--- a/test/xrc.Web.AcceptanceTest/Web.config
+++ b/test/xrc.Web.AcceptanceTest/Web.config
@@ -81,4 +81,20 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+
+	<!--<system.diagnostics>
+		<sources>
+			<source name="StackTrace">
+				<listeners>
+					<add name="xml" />
+				</listeners>
+			</source>
+		</sources>
+		<sharedListeners>
+			<add initializeData="C:\temp\xrc.Web.AcceptanceTest.svclog" type="System.Diagnostics.XmlWriterTraceListener"
+			  name="xml" />
+		</sharedListeners>
+		<trace autoflush="true" />
+	</system.diagnostics>-->
+	
 </configuration>
