--- a/src/xrc.Core/packages.config
+++ b/src/xrc.Core/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.0.0.4001" />
+  <package id="DynamicExpresso.Core" version="0.1.1.0" targetFramework="net40" />
   <package id="MarkdownXrc" version="1.0.2.0" targetFramework="net40" />
   <package id="System.Json" version="4.0.20126.16343" />
 </packages>
