--- a/src/xrc.Core/xrc.Core.csproj
+++ b/src/xrc.Core/xrc.Core.csproj
@@ -100,17 +100,17 @@
     <Compile Include="Kernel\IXrcService.cs" />
     <Compile Include="Kernel\XrcService.cs" />
     <Compile Include="Pages\PageCatch.cs" />
-    <Compile Include="Pages\Parsers\HtmlParserService.cs" />
+    <Compile Include="Pages\Parsers\XrcConfigParser.cs" />
+    <Compile Include="Pages\Parsers\HtmlParser.cs" />
     <Compile Include="Pages\Parsers\IPageParserService.cs" />
-    <Compile Include="Pages\Parsers\IParserService.cs" />
+    <Compile Include="Pages\Parsers\IResourceParser.cs" />
     <Compile Include="Pages\Parsers\PageDefinition.cs" />
     <Compile Include="Pages\Parsers\PageParserService.cs" />
-    <Compile Include="Pages\Parsers\ParserServiceBase.cs" />
-    <Compile Include="Pages\Parsers\RazorParserService.cs" />
-    <Compile Include="Pages\Parsers\XHtmlParserService.cs" />
-    <Compile Include="Pages\Parsers\XrcParserService.cs" />
-    <Compile Include="Pages\Parsers\XrcSchemaParserService.cs" />
-    <Compile Include="Pages\Parsers\XsltParserService.cs" />
+    <Compile Include="Pages\Parsers\ResourceParserBase.cs" />
+    <Compile Include="Pages\Parsers\RazorParser.cs" />
+    <Compile Include="Pages\Parsers\XHtmlParser.cs" />
+    <Compile Include="Pages\Parsers\XrcParser.cs" />
+    <Compile Include="Pages\Parsers\XsltParser.cs" />
     <Compile Include="Pages\UriSegmentParameterList.cs" />
     <Compile Include="Pages\ParametricUriSegmentResult.cs" />
     <Compile Include="Pages\Providers\IResourceProviderService.cs" />
