--- a/src/xrc.FileSystemPages/xrc.FileSystemPages.csproj
+++ b/src/xrc.FileSystemPages/xrc.FileSystemPages.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>xrc.Pages.Providers.FileSystem</RootNamespace>
-    <AssemblyName>xrc.Pages.Providers.FileSystem</AssemblyName>
+    <AssemblyName>xrc.FileSystemPages</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -29,6 +29,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\xrc.FileSystemPages.XML</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -40,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="FileSystemPageProviderService.cs" />
     <Compile Include="FileSystemPageStructureService.cs" />
     <Compile Include="FileSystemResourceProviderService.cs" />
