--- a/test/xrc.Windsor.UnitTest/xrc.Windsor.UnitTest.csproj
+++ b/test/xrc.Windsor.UnitTest/xrc.Windsor.UnitTest.csproj
@@ -9,7 +9,7 @@
     <ProjectGuid>{7EC2797E-7A04-4DDC-9165-0CA2EEE7AC11}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>xrc.Windsor.UnitTest</RootNamespace>
+    <RootNamespace>xrc</RootNamespace>
     <AssemblyName>xrc.Windsor.UnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -75,9 +75,9 @@
       <Project>{e1bba9c3-dc31-4901-88b1-d037f26aaf44}</Project>
       <Name>xrc.Markdown</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\xrc.Pages.Providers.FileSystem\xrc.Pages.Providers.FileSystem.csproj">
+    <ProjectReference Include="..\..\src\xrc.FileSystemPages\xrc.FileSystemPages.csproj">
       <Project>{c5bfc17c-949c-4c79-833b-b66531a0ad5f}</Project>
-      <Name>xrc.Pages.Providers.FileSystem</Name>
+      <Name>xrc.FileSystemPages</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\xrc.Windsor\xrc.Windsor.csproj">
       <Project>{2496197E-8B17-4AA0-98B2-E57B2C924EDF}</Project>
